リセットボタン微調整
枠の色をメインボタンの背景色に変更

--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
       .btn-secondary {
         background: #fff;
         color: #374151;
-        border: 1px solid #e5e7eb;
+        border: 1px solid #667eea;
       }
 
       .btn-secondary:disabled {
